build/MicroParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 Micro.g 2013-12-01 22:39:43

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class MicroParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID_LIST", "CALL_EXPR", "STMT_LIST", "FUNC_DECL_LIST", "FUNC_BODY", "EXPR_LIST", "PARAM_DECL_LIST", "VAR_DECL", "DECL", "STRING_DECL", "PGM_BODY", "PROGRAM", "BEGIN", "END", "IDENTIFIER", "STRING", "ASSIGN", "SEMICOLON", "STRINGLITERAL", "FLOAT", "INT", "VOID", "COMMA", "FUNCTION", "READ", "LP", "RP", "WRITE", "RETURN", "INTLITERAL", "FLOATLITERAL", "ADD", "SUB", "MULT", "DIV", "IF", "ENDIF", "ELSIF", "TRUE", "FALSE", "L", "G", "EQ", "LE", "GE", "NE", "DO", "WHILE", "FOR", "ENDFOR", "BREAK", "CONTINUE", "COMMENT", "WS"
    };
    public static final int EOF=-1;
    public static final int ID_LIST=4;
    public static final int CALL_EXPR=5;
    public static final int STMT_LIST=6;
    public static final int FUNC_DECL_LIST=7;
    public static final int FUNC_BODY=8;
    public static final int EXPR_LIST=9;
    public static final int PARAM_DECL_LIST=10;
    public static final int VAR_DECL=11;
    public static final int DECL=12;
    public static final int STRING_DECL=13;
    public static final int PGM_BODY=14;
    public static final int PROGRAM=15;
    public static final int BEGIN=16;
    public static final int END=17;
    public static final int IDENTIFIER=18;
    public static final int STRING=19;
    public static final int ASSIGN=20;
    public static final int SEMICOLON=21;
    public static final int STRINGLITERAL=22;
    public static final int FLOAT=23;
    public static final int INT=24;
    public static final int VOID=25;
    public static final int COMMA=26;
    public static final int FUNCTION=27;
    public static final int READ=28;
    public static final int LP=29;
    public static final int RP=30;
    public static final int WRITE=31;
    public static final int RETURN=32;
    public static final int INTLITERAL=33;
    public static final int FLOATLITERAL=34;
    public static final int ADD=35;
    public static final int SUB=36;
    public static final int MULT=37;
    public static final int DIV=38;
    public static final int IF=39;
    public static final int ENDIF=40;
    public static final int ELSIF=41;
    public static final int TRUE=42;
    public static final int FALSE=43;
    public static final int L=44;
    public static final int G=45;
    public static final int EQ=46;
    public static final int LE=47;
    public static final int GE=48;
    public static final int NE=49;
    public static final int DO=50;
    public static final int WHILE=51;
    public static final int FOR=52;
    public static final int ENDFOR=53;
    public static final int BREAK=54;
    public static final int CONTINUE=55;
    public static final int COMMENT=56;
    public static final int WS=57;

    // delegates
    // delegators


        public MicroParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public MicroParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return MicroParser.tokenNames; }
    public String getGrammarFileName() { return "Micro.g"; }


    	 Integer blockCnt = 0;
    	 boolean errFlag = true;
    	 SymbolTable globalTab;
    	 SymbolTable curTab;
    	 String output = "";


    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // Micro.g:31:1: program : PROGRAM id BEGIN pgm_body END ;
    public final MicroParser.program_return program() throws RecognitionException {
        MicroParser.program_return retval = new MicroParser.program_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token PROGRAM1=null;
        Token BEGIN3=null;
        Token END5=null;
        MicroParser.id_return id2 = null;

        MicroParser.pgm_body_return pgm_body4 = null;


        CommonTree PROGRAM1_tree=null;
        CommonTree BEGIN3_tree=null;
        CommonTree END5_tree=null;

        try {
            // Micro.g:32:5: ( PROGRAM id BEGIN pgm_body END )
            // Micro.g:32:8: PROGRAM id BEGIN pgm_body END
            {
            root_0 = (CommonTree)adaptor.nil();

            PROGRAM1=(Token)match(input,PROGRAM,FOLLOW_PROGRAM_in_program139); 
            PROGRAM1_tree = (CommonTree)adaptor.create(PROGRAM1);
            root_0 = (CommonTree)adaptor.becomeRoot(PROGRAM1_tree, root_0);

            pushFollow(FOLLOW_id_in_program142);
            id2=id();

            state._fsp--;

            BEGIN3=(Token)match(input,BEGIN,FOLLOW_BEGIN_in_program145); 
            pushFollow(FOLLOW_pgm_body_in_program148);
            pgm_body4=pgm_body();

            state._fsp--;

            adaptor.addChild(root_0, pgm_body4.getTree());
            END5=(Token)match(input,END,FOLLOW_END_in_program150); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class id_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "id"
    // Micro.g:35:1: id : IDENTIFIER ;
    public final MicroParser.id_return id() throws RecognitionException {
        MicroParser.id_return retval = new MicroParser.id_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IDENTIFIER6=null;

        CommonTree IDENTIFIER6_tree=null;

        try {
            // Micro.g:35:12: ( IDENTIFIER )
            // Micro.g:35:14: IDENTIFIER
            {
            root_0 = (CommonTree)adaptor.nil();

            IDENTIFIER6=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_id171); 
            IDENTIFIER6_tree = (CommonTree)adaptor.create(IDENTIFIER6);
            adaptor.addChild(root_0, IDENTIFIER6_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "id"

    public static class pgm_body_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "pgm_body"
    // Micro.g:37:1: pgm_body : decl func_declarations -> ^( PGM_BODY decl func_declarations ) ;
    public final MicroParser.pgm_body_return pgm_body() throws RecognitionException {
        MicroParser.pgm_body_return retval = new MicroParser.pgm_body_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        MicroParser.decl_return decl7 = null;

        MicroParser.func_declarations_return func_declarations8 = null;


        RewriteRuleSubtreeStream stream_func_declarations=new RewriteRuleSubtreeStream(adaptor,"rule func_declarations");
        RewriteRuleSubtreeStream stream_decl=new RewriteRuleSubtreeStream(adaptor,"rule decl");
        try {
            // Micro.g:37:10: ( decl func_declarations -> ^( PGM_BODY decl func_declarations ) )
            // Micro.g:37:12: decl func_declarations
            {
            pushFollow(FOLLOW_decl_in_pgm_body180);
            decl7=decl();

            state._fsp--;

            stream_decl.add(decl7.getTree());
            pushFollow(FOLLOW_func_declarations_in_pgm_body182);
            func_declarations8=func_declarations();

            state._fsp--;

            stream_func_declarations.add(func_declarations8.getTree());


            // AST REWRITE
            // elements: func_declarations, decl
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 37:35: -> ^( PGM_BODY decl func_declarations )
            {
                // Micro.g:37:38: ^( PGM_BODY decl func_declarations )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PGM_BODY, "PGM_BODY"), root_1);

                adaptor.addChild(root_1, stream_decl.nextTree());
                adaptor.addChild(root_1, stream_func_declarations.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "pgm_body"

    public static class decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "decl"
    // Micro.g:40:1: decl : ( decl_list )* -> ^( DECL ( decl_list )* ) ;
    public final MicroParser.decl_return decl() throws RecognitionException {
        MicroParser.decl_return retval = new MicroParser.decl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        MicroParser.decl_list_return decl_list9 = null;


        RewriteRuleSubtreeStream stream_decl_list=new RewriteRuleSubtreeStream(adaptor,"rule decl_list");
        try {
            // Micro.g:40:7: ( ( decl_list )* -> ^( DECL ( decl_list )* ) )
            // Micro.g:40:9: ( decl_list )*
            {
            // Micro.g:40:9: ( decl_list )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==STRING||(LA1_0>=FLOAT && LA1_0<=INT)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // Micro.g:40:9: decl_list
            	    {
            	    pushFollow(FOLLOW_decl_list_in_decl206);
            	    decl_list9=decl_list();

            	    state._fsp--;

            	    stream_decl_list.add(decl_list9.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);



            // AST REWRITE
            // elements: decl_list
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 40:20: -> ^( DECL ( decl_list )* )
            {
                // Micro.g:40:23: ^( DECL ( decl_list )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DECL, "DECL"), root_1);

                // Micro.g:40:30: ( decl_list )*
                while ( stream_decl_list.hasNext() ) {
                    adaptor.addChild(root_1, stream_decl_list.nextTree());

                }
                stream_decl_list.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "decl"

    public static class decl_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "decl_list"
    // Micro.g:42:1: decl_list : ( string_decl_list | var_decl_list );
    public final MicroParser.decl_list_return decl_list() throws RecognitionException {
        MicroParser.decl_list_return retval = new MicroParser.decl_list_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        MicroParser.string_decl_list_return string_decl_list10 = null;

        MicroParser.var_decl_list_return var_decl_list11 = null;



        try {
            // Micro.g:42:17: ( string_decl_list | var_decl_list )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==STRING) ) {
                alt2=1;
            }
            else if ( ((LA2_0>=FLOAT && LA2_0<=INT)) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // Micro.g:42:19: string_decl_list
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_string_decl_list_in_decl_list230);
                    string_decl_list10=string_decl_list();

                    state._fsp--;

                    adaptor.addChild(root_0, string_decl_list10.getTree());

                    }
                    break;
                case 2 :
                    // Micro.g:42:38: var_decl_list
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_var_decl_list_in_decl_list234);
                    var_decl_list11=var_decl_list();

                    state._fsp--;

                    adaptor.addChild(root_0, var_decl_list11.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "decl_list"

    public static class string_decl_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "string_decl_list"
    // Micro.g:45:1: string_decl_list : ( string_decl )+ ;
    public final MicroParser.string_decl_list_return string_decl_list() throws RecognitionException {
        MicroParser.string_decl_list_return retval = new MicroParser.string_decl_list_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        MicroParser.string_decl_return string_decl12 = null;



        try {
            // Micro.g:45:19: ( ( string_decl )+ )
            // Micro.g:45:21: ( string_decl )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // Micro.g:45:21: ( string_decl )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==STRING) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // Micro.g:45:21: string_decl
            	    {
            	    pushFollow(FOLLOW_string_decl_in_string_decl_list246);
            	    string_decl12=string_decl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, string_decl12.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "string_decl_list"

    public static class string_decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "string_decl"
    // Micro.g:47:1: string_decl : STRING id ASSIGN str SEMICOLON ;
    public final MicroParser.string_decl_return string_decl() throws RecognitionException {
        MicroParser.string_decl_return retval = new MicroParser.string_decl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token STRING13=null;
        Token ASSIGN15=null;
        Token SEMICOLON17=null;
        MicroParser.id_return id14 = null;

        MicroParser.str_return str16 = null;


        CommonTree STRING13_tree=null;
        CommonTree ASSIGN15_tree=null;
        CommonTree SEMICOLON17_tree=null;

        try {
            // Micro.g:47:13: ( STRING id ASSIGN str SEMICOLON )
            // Micro.g:47:15: STRING id ASSIGN str SEMICOLON
            {
            root_0 = (CommonTree)adaptor.nil();

            STRING13=(Token)match(input,STRING,FOLLOW_STRING_in_string_decl256); 
            STRING13_tree = (CommonTree)adaptor.create(STRING13);
            root_0 = (CommonTree)adaptor.becomeRoot(STRING13_tree, root_0);

            pushFollow(FOLLOW_id_in_string_decl259);
            id14=id();

            state._fsp--;

            adaptor.addChild(root_0, id14.getTree());
            ASSIGN15=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_string_decl261); 
            pushFollow(FOLLOW_str_in_string_decl264);
            str16=str();

            state._fsp--;

            adaptor.addChild(root_0, str16.getTree());
            SEMICOLON17=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_string_decl266); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "string_decl"

    public static class str_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "str"
    // Micro.g:49:1: str : STRINGLITERAL ;
    public final MicroParser.str_return str() throws RecognitionException {
        MicroParser.str_return retval = new MicroParser.str_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token STRINGLITERAL18=null;

        CommonTree STRINGLITERAL18_tree=null;

        try {
            // Micro.g:49:6: ( STRINGLITERAL )
            // Micro.g:49:8: STRINGLITERAL
            {
            root_0 = (CommonTree)adaptor.nil();

            STRINGLITERAL18=(Token)match(input,STRINGLITERAL,FOLLOW_STRINGLITERAL_in_str277); 
            STRINGLITERAL18_tree = (CommonTree)adaptor.create(STRINGLITERAL18);
            adaptor.addChild(root_0, STRINGLITERAL18_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "str"

    public static class var_decl_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_decl_list"
    // Micro.g:53:1: var_decl_list : ( var_decl )+ ;
    public final MicroParser.var_decl_list_return var_decl_list() throws RecognitionException {
        MicroParser.var_decl_list_return retval = new MicroParser.var_decl_list_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        MicroParser.var_decl_return var_decl19 = null;



        try {
            // Micro.g:53:15: ( ( var_decl )+ )
            // Micro.g:53:17: ( var_decl )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // Micro.g:53:17: ( var_decl )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( ((LA4_0>=FLOAT && LA4_0<=INT)) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // Micro.g:53:17: var_decl
            	    {
            	    pushFollow(FOLLOW_var_decl_in_var_decl_list289);
            	    var_decl19=var_decl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, var_decl19.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "var_decl_list"

    public static class var_decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_decl"
    // Micro.g:55:1: var_decl : var_type var_id_list ';' -> ^( VAR_DECL var_type var_id_list ) ;
    public final MicroParser.var_decl_return var_decl() throws RecognitionException {
        MicroParser.var_decl_return retval = new MicroParser.var_decl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal22=null;
        MicroParser.var_type_return var_type20 = null;

        MicroParser.var_id_list_return var_id_list21 = null;


        CommonTree char_literal22_tree=null;
        RewriteRuleTokenStream stream_SEMICOLON=new RewriteRuleTokenStream(adaptor,"token SEMICOLON");
        RewriteRuleSubtreeStream stream_var_type=new RewriteRuleSubtreeStream(adaptor,"rule var_type");
        RewriteRuleSubtreeStream stream_var_id_list=new RewriteRuleSubtreeStream(adaptor,"rule var_id_list");
        try {
            // Micro.g:55:17: ( var_type var_id_list ';' -> ^( VAR_DECL var_type var_id_list ) )
            // Micro.g:55:19: var_type var_id_list ';'
            {
            pushFollow(FOLLOW_var_type_in_var_decl306);
            var_type20=var_type();

            state._fsp--;

            stream_var_type.add(var_type20.getTree());
            pushFollow(FOLLOW_var_id_list_in_var_decl308);
            var_id_list21=var_id_list();

            state._fsp--;

            stream_var_id_list.add(var_id_list21.getTree());
            char_literal22=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_var_decl310);  
            stream_SEMICOLON.add(char_literal22);



            // AST REWRITE
            // elements: var_type, var_id_list
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 55:44: -> ^( VAR_DECL var_type var_id_list )
            {
                // Micro.g:55:47: ^( VAR_DECL var_type var_id_list )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(VAR_DECL, "VAR_DECL"), root_1);

                adaptor.addChild(root_1, stream_var_type.nextTree());
                adaptor.addChild(root_1, stream_var_id_list.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "var_decl"

    public static class var_type_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_type"
    // Micro.g:57:1: var_type : ( FLOAT | INT );
    public final MicroParser.var_type_return var_type() throws RecognitionException {
        MicroParser.var_type_return retval = new MicroParser.var_type_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token set23=null;

        CommonTree set23_tree=null;

        try {
            // Micro.g:57:10: ( FLOAT | INT )
            // Micro.g:
            {
            root_0 = (CommonTree)adaptor.nil();

            set23=(Token)input.LT(1);
            if ( (input.LA(1)>=FLOAT && input.LA(1)<=INT) ) {
                input.consume();
                adaptor.addChild(root_0, (CommonTree)adaptor.create(set23));
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "var_type"

    public static class any_type_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };
